# AURA-JOURNAL

./: README.md  package-lock.json
.kiro/specs/production-readiness/: design.md  requirements.md  tasks.md
aura-journal-app/: .env.example  App.js  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml
aura-journal-app/app/: _layout.tsx
aura-journal-app/app/(tabs)/: index.tsx
aura-journal-app/patches/: @react-navigation+elements+2.3.8.patch
aura-journal-app/scripts/: apply-patches.js
aura-journal-app/src/components/: Header.js  InsightsPanel.js  JournalInput.js  LoadingState.js  RecentEntriesList.js  ThemeToggleButton.js
aura-journal-app/src/context/: ThemeContext.js
aura-journal-app/src/design-system/: IMPLEMENTATION.md  README.md  index.ts
aura-journal-app/src/design-system/components/: BottomSheet.IMPLEMENTATION.md  BottomSheet.demo.tsx  BottomSheet.example.tsx  BottomSheet.md  BottomSheet.tsx  Button.example.tsx  Button.md  Button.tsx  Card.example.tsx  Card.md  Card.tsx  Input.example.tsx  Input.md  Input.tsx  JournalCard.IMPLEMENTATION.md  JournalCard.example.tsx  JournalCard.md  JournalCard.tsx  Text.example.tsx  Text.tsx  index.ts
aura-journal-app/src/design-system/components/__tests__/: BottomSheet.integration.tsx  Button.integration.tsx  Card.integration.tsx  Input.integration.tsx  Input.visual.test.tsx  JournalCard.integration.tsx
aura-journal-app/src/design-system/theme/: ThemeContext.tsx
aura-journal-app/src/design-system/tokens/: borderRadius.ts  colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts
aura-journal-app/src/design-system/utils/: index.ts  tokens.ts
aura-journal-app/src/screens/: JournalScreen.js
aura-journal-app/src/services/: api.js
aura-journal-app/src/theme/: theme.js
backend/: .env  .env.example  README.md  __init__.py  docker-compose.yml  pyproject.toml  test_auth.db  test_auth_api.db
backend/.github/workflows/: ci.yml
backend/scripts/: run_service.py  run_tests.py
backend/services/: __init__.py
backend/services/auth_service/: DATABASE_SCHEMA.md  Dockerfile  README.md  auth_handler.py  config.py  database.py  main.py  migrate.py  models.py  pyproject.toml  run.py  test_auth_api.db
backend/services/auth_service/migrations/: alembic.ini  env.py
backend/services/auth_service/migrations/versions/: 001_initial_user_auth_tables.py
backend/services/auth_service/repositories/: __init__.py  base_repository.py  session_repository.py  user_repository.py
backend/services/auth_service/tests/: test_api.py  test_auth_handler.py
backend/services/entry_ingestor/: .dockerignore  .env  Dockerfile  pyproject.toml
backend/services/entry_ingestor/app/: README.md  crud.py  database.py  dependencies.py  main.py  models.py  services.py
backend/services/entry_ingestor/tests/: test_main.py  test_services.py
backend/services/nlp_agent/: Dockerfile  README.md  main.py  pyproject.toml
backend/services/nlp_agent/app/: __init__.py  config.py  gcp_client.py  main.py  schemas.py
backend/services/nlp_agent/tests/: test_main.py
backend/shared/: __init__.py  config.py  database.py  pyproject.toml  schemas.py
backend/tests/: conftest.py  test_shared.py
