[project]
name = "aura-journal-shared"
version = "0.1.0"
description = "Shared utilities and schemas for Aura Journal services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "pymongo>=4.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]